[package]
name = "ver"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
tar = "0.4"
flate2 = "1.0"
indicatif = "0.17"
console = "0.15"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
zip = "0.6"
chrono = "0.4"
